--- a/styles/index.css
+++ b/styles/index.css
@@ -4,6 +4,7 @@
 
 body {
   background-color: #FCFCFC;
+  font-family: 'Roboto', sans-serif;
 }
 
 body, html {
@@ -74,9 +75,12 @@ h1, h2 {
   margin-top: 1rem;
   margin-left: 2rem;
   margin-bottom: 1rem;
+  text-align: center;
+  text-decoration:underline;
 }
 h1 + h2 {
   color: purple;
+  
 }
 
 legend ~ label {
