--- a/styles/index.css
+++ b/styles/index.css
@@ -53,6 +53,8 @@ table th {
   border-radius: 0.5em;
   border-style: solid;
   height: 4ch;
+  width: 90%;
+  max-width: 600px;
   padding: 0.25rem 0.5rem 0.25rem 0.5rem;
 }
 
@@ -68,6 +70,11 @@ a[href="http://stoneztao.com/"] {
   color: rgba(152, 140, 13, 0.85);
 }
 
+.content-section {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: auto;
+}
 .content-section.funny h1 {
   color: hsl(12, 100%, 50%);
 }
@@ -78,9 +85,15 @@ canvas {
 header {
   position: sticky;
   top: 0;
-}
-header > nav {
+  display: flex;
+  justify-content: flex-start;
   background-color: rgb(55, 153, 233);
+  flex-wrap: wrap;
+  width: 100%;
+  align-content: flex-start;
+}
+header {
+  
 }
 header > nav > div {
   margin-left: 2rem;
